--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,3 +12,16 @@ p{
 	text-align: center;
 	font-size: 32px;
 }
+
+img{
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: auto;
+	height: 25vh;
+}
+
+#next{
+	display: block;
+	float: right;
+}
